--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sequelize": "^5.21.6"
   },
   "devDependencies": {
-    "jest": "^25.3.0"
+    "jest": "^25.3.0",
+    "supertest": "^4.0.2"
   }
 }
