fixing test pet

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test jest thread.test.js --detectOpenHandles",
-    "testwin": "SET NODE_ENV=test&& jest --detectOpenHandles",
+    "testwin": "SET NODE_ENV=test&& jest pet.test.js --detectOpenHandles",
     "dev": "NODE_ENV=development nodemon bin/http.js",
     "devwin": "SET NODE_ENV=development&& nodemon bin/http.js",
     "start": "node bin/http.js"
